# Software-and-Systems-Lab

Lab1/lab01_group02_final/: Extra_twelfthRoot.m  Readme.txt  twelfthRoot.m
Lab1/lab01_group02_final_inlab/: ProjectileMotion.m  Readme.txt  pagerank.m  small.txt
Lab10/inlab/lab10_group02_final/: Readme.txt
Lab10/outlab/Lab10_group02_final/: Readme.txt
Lab2/lab02_group02_final_inlab/: ReadMe.txt
Lab2/lab02_group02_final_inlab/My Webpage/: AboutMe1.html  index.css  index.html
Lab2/lab02_group02_final_outlab/: ReadMe.txt  video.html
Lab2/lab02_group_challenge/: ReadMe.txt  sudoku.html
Lab3/inlab/lab03_group02_final/: ReadMe.txt
Lab4/inlab/lab04_group02_final/: ReadMe.txt  config  countFreq.sh  makePasswordless.sh  syncToMars.sh
Lab4/outlab/lab04_group02_final/: ReadMe.txt  compute_inc.sh  count_files.sh  ohwhattime.sh  print_header_files.sh  question4  script_compile.sh  system_spec.sh
Lab5/outlab/lab05_group02_final/: CMakeLists.txt  Readme.txt  cmakeSubmit.txt  make.txt  makefile_g02
Lab6/inlab/lab06_group02_final/: Beamer.tex  GM.tex  ReadMe.txt  plot.sh
Lab6/outlab/lab06_group02_final/: ReadMe.txt  input.sh  makefile
Lab7/inlab/lab07_group02_final/: ReadMe.txt  comment_finder.py
Lab7/outlab/lab07_group02_outlab/: Readme.txt  fetch_data.py  text_to_csv.py
Lab8/lab08_group02_final/: NthRoot.java  ReadersWriters.java  Readme.txt  SolveBigEquation.java
Lab9/inlab/lab09_group02_final/: Readme.txt  correct.c  create_data.sh  fip.cpp  log.txt  plot.py
Lab9/outlab/lab09_group02_final/: Makefile  Readme.txt
(+60 files in other folders)
